--- a/src/robocar_package/package.xml
+++ b/src/robocar_package/package.xml
@@ -12,6 +12,10 @@
   <depend>geometry_msgs</depend>
   <depend>adafruit-circuitpython-servokit</depend>
 
+  <build_depend>rosidl_default_generators</build_depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
